# containers

./: .gitignore  README.md  devenv.nix
apps/blocky/: Dockerfile  metadata.yaml
apps/blocky/ci/: latest.sh
apps/bw/: entrypoint.sh  healthcheck.sh
apps/git/: Dockerfile  metadata.yaml
apps/git/ci/: latest.sh
apps/gnupg-pkcs11-scd/: Dockerfile  entrypoint.sh  metadata.yaml
apps/gnupg-pkcs11-scd/ci/: goss.yaml  latest.sh
apps/infisical-pkcs11-provider/: Dockerfile  metadata.yaml
apps/infisical-pkcs11-provider/ci/: goss.yaml  latest.sh
apps/kanidm-provision/: Dockerfile  entrypoint.sh  metadata.yaml
apps/kanidm-provision/ci/: goss.yaml  latest.sh
apps/kodi/: Dockerfile  entrypoint.sh  metadata.yaml
apps/kodi/ci/: goss.yaml  latest.sh
apps/pipewire/: Dockerfile  entrypoint.sh  metadata.yaml
apps/pipewire/ci/: goss.yaml  latest.sh
apps/restic-rclone/: Dockerfile  metadata.yaml
apps/restic-rclone/ci/: goss.yaml  latest.sh
apps/scdaemon-shim/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  metadata.yaml
apps/scdaemon-shim/ci/: goss.yaml  latest.sh
apps/scdaemon-shim/src/: main.rs
apps/ssh-tpm-agent/: Dockerfile  entrypoint.sh  metadata.yaml
apps/ssh-tpm-agent/ci/: goss.yaml  latest.sh
apps/timescaledb/: Dockerfile  metadata.yaml
apps/timescaledb/ci/: goss.yaml  latest.sh
apps/weston/: Dockerfile  entrypoint.sh  metadata.yaml
apps/weston/ci/: goss.yaml  latest.sh
depercated_apps/kanidm-provision/: metadata.yaml
docs/examples/: scdaemon-shim.c
docs/superpowers/plans/: 2026-07-08-pkcs11-signing-sidecar.md
(+1 files in other folders)
